<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    tools:context=".activities.volunteer.VolunteerEditProfileActivity">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="TextView"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Email Id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Phone Number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Gender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/genderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

<!--        <TextView-->
<!--            android:id="@+id/passwordTV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:text="Password"-->
<!--            android:textSize="20sp" />-->

<!--        <EditText-->
<!--            android:id="@+id/profilePasswordEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/edit_text_border"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPassword"-->
<!--            android:textSize="20sp" />-->

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="20dp"
            android:text="Save" />

    </LinearLayout>


</ScrollView>