<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.volunteer.VolunteerSlotAvailabilityActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timeSlotTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="10:00 - 11:00"
        android:textSize="16sp"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/timeSlotTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="11:00 - 12:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/timeSlotTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="12:00 - 13:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/timeSlotTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="13:00 - 14:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <TextView
        android:id="@+id/timeSlotTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="14:00 - 15:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <TextView
        android:id="@+id/timeSlotTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="15:00 - 16:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <TextView
        android:id="@+id/timeSlotTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="16:00 - 17:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/timeSlotTextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="17:00 - 18:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/timeSlotTextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_slot_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="18:00 - 19:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Availability"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />
</androidx.constraintlayout.widget.ConstraintLayout>